project1/css/styles.css
/*css for spec sheet*/

/*adding colours to the sectiosn to differenciate them*/
*{
    margin: 0;
    /*outline: 1px solid red; */
    box-sizing: border-box;
}

body{
    background-color: rgb(175, 170, 170);
    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    line-height: 1.5em;

}

h1, h2, h3{
    color: #312f64;
}

p, ul{
    font-size: 25px;
    line-height: 1.5em;
}


#introduction{
    background-color: #708993;
    padding: 1em;
    grid-area: introduction;

    display:flex;
    flex-direction: column;
}
h1{
    font-size: 3.5em;
    text-decoration: underline;
    text-underline-offset: 10px;
    line-height:3em;
    position: relative;
    top: 1vh;
}

h2{
    font-size: 3em;
    line-height: 1em;
}

h3{
    font-size: 2em;
    line-height: 2em;
}

img{
    width:100%
}
#empty{
    height: 5vh;
    grid-area: empty;
}
#introduction h2.part1{
    text-align: center;
}

#introduction p.hook{
    font-size: 1.5em;
    margin: 1.5em;
    text-align: center;
}

#introduction p, #introduction li{
    color: rgb(226, 222, 222);
}

#publication-info ul{
    font-weight: bold;
    line-height: 2em;
}


#introduction a{
    line-height: 2em;
    text-align: right;
    font-weight: bold;
    text-decoration: none;
}
#navigation{
    grid-area: navigation;
    padding: 1em;

    width: 100%;
    height: 5vh;
    position: fixed;
    top: 0;
    background-color: #333;
}
#navigation a:link{
    color: rgb(226, 222, 222);
}
#navigation a:visited{
    color: rgb(181, 71, 89);
}
#navigation a:focus{
    color: orange;
}
#navigation a:hover{
    color: rgb(251, 227, 191);
}
#navigation a:active{
    color: rgb(145, 217, 182);
}

#navigation nav{
    text-align: center;
}

#navigation nav a{
    width: 100px;
    height: 100px;
    padding: 10px;
    background-color: #312f64;
    border: 1px solid black;
}

#sidebar.logo{
    margin: 20px 0px;
    grid-area: logo;
}

#sidebar img.playdead{
    grid-area: playdead;
    font-size: 10px;
}


#sidebar p{
    font-size: 10px;
}

#sidebar #publication-info{
    grid-area: publication;
    text-align: left;
}
#sidebar{
    background-color: #E7F2EF;
    padding: 1em;
    grid-area: sidebar;
    text-align: right;

    display: grid;
    grid-row: 3fr 3fr 3fr 3fr;
    grid-template-areas: "logo"
                        "publication"
                        "playdead"
                        "."
                        ".";
}

#content div.subtext{
    grid-area: subtext;
    font-weight: bold;
    font-size: 1.5em;
}

#content div.rc1-1{
    grid-area: rc1-1;
}
#content div.rc1-2{
    grid-area: rc1-2;
}

#content div.rc1-3{
    grid-area: rc1-3;
}
#content div.rc1-4{
    grid-area: rc1-4;
}

#content div.rc2-1{
    grid-area: rc2-1;
}

#content div.rc2-2{
    grid-area: rc2-2;
}

#content div.rc3{
    grid-area: rc3;
}

#content{
    background-color: #A1C2BD;
    padding: 2em;
    grid-area: content;

    display:grid;
    grid-row: 8fr 2fr 2fr;
    grid-column: 1fr 1fr 1fr 1fr;

    grid-template-areas: "rc1-1 rc1-2 rc1-3 rc1-4"
                        "rc2-1 rc2-1 rc2-2 rc2-2"
                        "rc3 rc3 rc3 rc3";
    
    gap: 2em;

}

#content h3{
    margin-top:1em;
}
#content p{
    margin: 5px;
}

#footer{
    grid-area: footer;
    background-color: #708993;
    padding: 1em;
}

#footer p{
    color: rgb(226, 222, 222);
}


#single-page{
    display: grid;
    height: 100vh;

    grid-row: 1fr 3fr 7fr 1fr;
    grid-column: 1fr 12fr;

    grid-template-areas:"empty empty"
                        "sidebar introduction"
                        "sidebar content"
                        "footer footer";
}


/*MOBILE VERSION*/


@media screen and (max-width:900px ){

    #single-page{
        grid-template-rows: 1fr 3fr 2fr 7fr 1fr;
        grid-template-columns: none;

        grid-template-areas: "empty"
                        "introduction"
                        "sidebar"
                        "content"
                        "footer";
    }

    #sidebar img{
        width: 80%;
    }

    #sidebar{
        text-align: left;

        grid-row: 1fr 1fr;
        grid-column: 2fr 2fr;

        grid-template-areas:"publication logo " 
                            "publication playdead";
                            gap: 4em;

    }

        #content{
        grid-template-columns:none;
        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;

        grid-template-areas: "rc1-1"
                            "rc1-2"
                            "rc1-3"
                            "rc1-4"
                            "rc2-1"
                            "rc2-2"
                            "rc3";
    }

}

@media screen and (max-width:500px ) {



    #introduction h1{
        font-size: 2.5em;
    }

    #introduction h2{
        font-size: 1.7em;
    }



    #sidebar{
        grid-row: 1fr 1fr 1fr;
        grid-template-areas:"publication  " 
                            "logo"
                            "playdead";
    } 

    #navigation a{
        margin: 10px;
    }

}

